Updated code for Dynamically Rendering

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
  
   <style>
     html {
-      background: linear-gradient(to right, #eeecec, #c4cdce);
+      background: linear-gradient(to right, #f5f3f3, #b4bdbe);
     }
   </style>
 </head>
